Administration Class tests implemented (100% coverage)

--- a/IB_Server/.jacocoverage/report.html/Models/Bankrekening.java.html
+++ b/IB_Server/.jacocoverage/report.html/Models/Bankrekening.java.html
@@ -20,7 +20,7 @@ public class Bankrekening {
 <span class="fc" id="L20">    }</span>
     
     public Klant getKlant() {
-<span class="nc" id="L23">        return klant;</span>
+<span class="fc" id="L23">        return klant;</span>
     }
     
     /**
