--- a/IB_Server/.jacocoverage/report.html/Models/Bank.java.html
+++ b/IB_Server/.jacocoverage/report.html/Models/Bank.java.html
@@ -65,23 +65,23 @@ public class Bank extends UnicastRemoteObject implements IBank {
     
     @Override
     public ArrayList&lt;String&gt; getAccounts(Klant klant) throws SessionExpiredException, IllegalArgumentException, RemoteException {
-<span class="nc" id="L68">        ArrayList&lt;String&gt; accounts = new ArrayList();</span>
-<span class="nc bnc" id="L69" title="All 2 branches missed.">        if (klant == null) {</span>
+<span class="fc" id="L68">        ArrayList&lt;String&gt; accounts = new ArrayList();</span>
+<span class="pc bpc" id="L69" title="1 of 2 branches missed.">        if (klant == null) {</span>
 <span class="nc" id="L70">            throw new IllegalArgumentException(&quot;Client can't be null&quot;);</span>
         }
-<span class="nc bnc" id="L72" title="All 2 branches missed.">        else if (!admin.checkSession(klant.getUsername())) {</span>
+<span class="pc bpc" id="L72" title="1 of 2 branches missed.">        else if (!admin.checkSession(klant.getUsername())) {</span>
 <span class="nc" id="L73">            throw new SessionExpiredException(&quot;Session has expired&quot;);</span>
         }
         else {
-<span class="nc bnc" id="L76" title="All 2 branches missed.">            for (Bankrekening b : bankAccounts) {</span>
-<span class="nc bnc" id="L77" title="All 2 branches missed.">                if (b.getKlant().getUsername().equals(klant.getUsername())) {</span>
+<span class="fc bfc" id="L76" title="All 2 branches covered.">            for (Bankrekening b : bankAccounts) {</span>
+<span class="pc bpc" id="L77" title="1 of 2 branches missed.">                if (b.getKlant().getUsername().equals(klant.getUsername())) {</span>
 <span class="nc" id="L78">                    accounts.add(b.toString());</span>
                 }
-<span class="nc" id="L80">            }</span>
+<span class="fc" id="L80">            }</span>
         }
         //Refresh session on button click
-<span class="nc" id="L83">        admin.refreshSession(klant);</span>
-<span class="nc" id="L84">        return accounts;</span>
+<span class="fc" id="L83">        admin.refreshSession(klant);</span>
+<span class="fc" id="L84">        return accounts;</span>
     }
 
     @Override
