--- a/IB_Server/.jacocoverage/report.html/Shared_Client/Klant.java.html
+++ b/IB_Server/.jacocoverage/report.html/Shared_Client/Klant.java.html
@@ -67,7 +67,7 @@ public class Klant implements Serializable {
      * @throws java.rmi.RemoteException
      */
     public ArrayList&lt;String&gt; getBankAccounts(IBank bank) throws SessionExpiredException, IllegalArgumentException, RemoteException {
-<span class="nc" id="L70">        return bank.getAccounts(this);</span>
+<span class="fc" id="L70">        return bank.getAccounts(this);</span>
     }
     
     /**
