Bank test methods added: getName, getShortName, getTransactions, getAccounts

--- a/IB_Server/.jacocoverage/report.html/Shared_Client/Klant.java.html
+++ b/IB_Server/.jacocoverage/report.html/Shared_Client/Klant.java.html
@@ -26,8 +26,8 @@ public class Klant implements Serializable {
      * @throws java.rmi.RemoteException
      */
     public void addBankAccount(IBank bank) throws SessionExpiredException, IllegalArgumentException, RemoteException {
-<span class="nc" id="L29">        bank.addBankAccount(this);</span>
-<span class="nc" id="L30">    }</span>
+<span class="fc" id="L29">        bank.addBankAccount(this);</span>
+<span class="fc" id="L30">    }</span>
     
     /**
      * Removes a bank account on the server linked with this Client.
