--- a/IB_Server/.jacocoverage/report.html/ib_server/Server.java.html
+++ b/IB_Server/.jacocoverage/report.html/ib_server/Server.java.html
@@ -26,7 +26,7 @@ public class Server
 <span class="nc" id="L26">    private IPersistencyMediator database = null;</span>
 <span class="nc" id="L27">    private boolean connectedToDatabase = false;</span>
     
-    public IRemotePublisherForDomain publisher;
+    private IRemotePublisherForDomain publisher;
     private Registry centraleRegistry;
     private Registry serverRegistry;
     private Registry dataBaseRegistry;
