--- a/IB_Server/.jacocoverage/report.html/Models/BankTrans.java.html
+++ b/IB_Server/.jacocoverage/report.html/Models/BankTrans.java.html
@@ -18,30 +18,30 @@ public class BankTrans extends UnicastRemoteObject implements IBankTrans {
     
     @Override
     public void addSaldo(String IBAN, double value) throws IllegalArgumentException, RemoteException {
-<span class="nc bnc" id="L21" title="All 4 branches missed.">        if (IBAN.isEmpty() || value &lt;= 0) {</span>
+<span class="pc bpc" id="L21" title="2 of 4 branches missed.">        if (IBAN.isEmpty() || value &lt;= 0) {</span>
 <span class="nc" id="L22">            throw new IllegalArgumentException(&quot;Input can't be null&quot;);</span>
         }
-<span class="nc bnc" id="L24" title="All 2 branches missed.">        else if (!bank.checkIBANExists(IBAN)) {</span>
+<span class="pc bpc" id="L24" title="1 of 2 branches missed.">        else if (!bank.checkIBANExists(IBAN)) {</span>
 <span class="nc" id="L25">            throw new IllegalArgumentException(&quot;IBAN doesn't exists&quot;);</span>
         }
         else {
-<span class="nc" id="L28">            Bankrekening bankAccount = bank.IBANToBankAccount(IBAN);</span>
-<span class="nc" id="L29">            bankAccount.addToBalance(value);</span>
+<span class="fc" id="L28">            Bankrekening bankAccount = bank.IBANToBankAccount(IBAN);</span>
+<span class="fc" id="L29">            bankAccount.addToBalance(value);</span>
         }
-<span class="nc" id="L31">    }</span>
+<span class="fc" id="L31">    }</span>
 
     @Override
     public void removeSaldo(String IBAN, double value) throws IllegalArgumentException, RemoteException {
-<span class="nc bnc" id="L35" title="All 4 branches missed.">        if (IBAN.isEmpty() || value &lt;= 0) {</span>
+<span class="pc bpc" id="L35" title="2 of 4 branches missed.">        if (IBAN.isEmpty() || value &lt;= 0) {</span>
 <span class="nc" id="L36">            throw new IllegalArgumentException(&quot;Input can't be null&quot;);</span>
         }
-<span class="nc bnc" id="L38" title="All 2 branches missed.">        else if (!bank.checkIBANExists(IBAN)) {</span>
+<span class="pc bpc" id="L38" title="1 of 2 branches missed.">        else if (!bank.checkIBANExists(IBAN)) {</span>
 <span class="nc" id="L39">            throw new IllegalArgumentException(&quot;IBAN doesn't exists&quot;);</span>
         }
         else {
-<span class="nc" id="L42">            Bankrekening bankAccount = bank.IBANToBankAccount(IBAN);</span>
-<span class="nc" id="L43">            bankAccount.removeFromBalance(value);</span>
+<span class="fc" id="L42">            Bankrekening bankAccount = bank.IBANToBankAccount(IBAN);</span>
+<span class="fc" id="L43">            bankAccount.removeFromBalance(value);</span>
         }
-<span class="nc" id="L45">    }</span>
+<span class="fc" id="L45">    }</span>
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.eclemma.org/jacoco">JaCoCo</a> 0.7.5.201505241946</span></div></body></html>
