--- a/IB_Server/.jacocoverage/report.html/Models/Bankrekening.java.html
+++ b/IB_Server/.jacocoverage/report.html/Models/Bankrekening.java.html
@@ -29,7 +29,7 @@ public class Bankrekening {
      * @return True if succesful, else false.
      */
     public boolean addToBalance(double value) {
-<span class="nc" id="L32">        return true;</span>
+<span class="fc" id="L32">        return true;</span>
     }
     
     /**
@@ -38,12 +38,12 @@ public class Bankrekening {
      * @return True if succesful, else false.
      */
     public boolean removeFromBalance(double value) {
-<span class="nc" id="L41">        return true;</span>
+<span class="fc" id="L41">        return true;</span>
     }
     
     @Override
     public String toString() {
-<span class="nc" id="L46">        return IBAN + &quot;;&quot;  + String.valueOf(balance);</span>
+<span class="fc" id="L46">        return IBAN + &quot;;&quot;  + String.valueOf(balance);</span>
     }
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.eclemma.org/jacoco">JaCoCo</a> 0.7.5.201505241946</span></div></body></html>
