--- a/IB_Server/.jacocoverage/report.html/Shared_Client/Klant.java.html
+++ b/IB_Server/.jacocoverage/report.html/Shared_Client/Klant.java.html
@@ -80,7 +80,7 @@ public class Klant implements Serializable {
      * @throws java.rmi.RemoteException
      */
     public ArrayList&lt;String&gt; getTransactions(String IBAN, IBank bank) throws SessionExpiredException, IllegalArgumentException, RemoteException {
-<span class="nc" id="L83">        return bank.getTransactions(IBAN, this);</span>
+<span class="fc" id="L83">        return bank.getTransactions(IBAN, this);</span>
     }
     
     public boolean startTransaction(String IBAN1, String IBAN2, double value, String description, IBank bank) throws SessionExpiredException, IllegalArgumentException, RemoteException {
