All models + exceptions + shared object Klant 100% coverage

--- a/IB_Server/.jacocoverage/report.html/Exceptions/SessionExpiredException.java.html
+++ b/IB_Server/.jacocoverage/report.html/Exceptions/SessionExpiredException.java.html
@@ -14,8 +14,8 @@ package Exceptions;
 public class SessionExpiredException extends Exception {
 
     public SessionExpiredException() {
-<span class="nc" id="L17">        super();</span>
-<span class="nc" id="L18">    }</span>
+<span class="fc" id="L17">        super();</span>
+<span class="fc" id="L18">    }</span>
     
     public SessionExpiredException(String message) {
 <span class="fc" id="L21">        super(message);</span>
