--- a/IB_Server/.jacocoverage/report.html/Exceptions/LimitReachedException.java.html
+++ b/IB_Server/.jacocoverage/report.html/Exceptions/LimitReachedException.java.html
@@ -8,11 +8,11 @@
 public class LimitReachedException extends Exception {
     
     public LimitReachedException() {
-<span class="nc" id="L11">        super();</span>
-<span class="nc" id="L12">    }</span>
+<span class="fc" id="L11">        super();</span>
+<span class="fc" id="L12">    }</span>
     
     public LimitReachedException(String message) {
-<span class="nc" id="L15">        super(message);</span>
-<span class="nc" id="L16">    }</span>
+<span class="fc" id="L15">        super(message);</span>
+<span class="fc" id="L16">    }</span>
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.eclemma.org/jacoco">JaCoCo</a> 0.7.5.201505241946</span></div></body></html>
