--- a/IB_Server/.jacocoverage/report.html/Exceptions/RegisterException.java.html
+++ b/IB_Server/.jacocoverage/report.html/Exceptions/RegisterException.java.html
@@ -7,8 +7,8 @@
 public class RegisterException extends Exception {
 
     public RegisterException() {
-<span class="nc" id="L10">        super();</span>
-<span class="nc" id="L11">    }</span>
+<span class="fc" id="L10">        super();</span>
+<span class="fc" id="L11">    }</span>
     
     public RegisterException(String message) {
 <span class="fc" id="L14">        super(message);</span>
