--- a/IB_Server/.jacocoverage/report.html/Models/Bankrekening.java.html
+++ b/IB_Server/.jacocoverage/report.html/Models/Bankrekening.java.html
@@ -10,7 +10,7 @@ public class Bankrekening {
     
     private String IBAN;
 <span class="fc" id="L12">    private double balance = 0;</span>
-<span class="fc" id="L13">    private final double credit = 100;</span>
+<span class="fc" id="L13">    private double credit = 100;</span>
     private Klant klant;
     
 <span class="fc" id="L16">    public Bankrekening(String IBAN, Klant klant) {</span>
